Schema ID is removed as per the discussion and Jqgrid alignment fixed for the scrollbar grids.

--- a/eSyaEnterprise_UI/wwwroot/css/Common/jqgridcustomstyle.css
+++ b/eSyaEnterprise_UI/wwwroot/css/Common/jqgridcustomstyle.css
@@ -222,9 +222,12 @@ td:first-child.ui-state-default.jqgrid-rownum {
 .ui-state-default.jqgrid-rownum {
     color: #797172 !important;
 }
+tr.ui-jqgrid-labels{
+    display:table;
+}
 /*Custom Table for Parameter*/
-#tbParameter{
-    width:100% !important;
+#tbParameter {
+    width: 100% !important;
 }
     #tbParameter th {
         padding: 5px;
